Reset button aligned verically and will appear after timer will start

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
       </div>
       <div class="controls">
-        <img class="reset" src="./assets/reset.svg" alt="" />
+        <img class="reset hidden" src="./assets/reset.svg" alt="" />
         <img class="play-pause" src="./assets/play.svg" alt="" />
       </div>
     </div>
